css/output.css
html, body {
  margin: 0;
  padding: 0;
  overflow-x: hidden; }

.button-wrapper {
  text-align: center;
  margin: 45px;
  padding: 25px;
  cursor: pointer;
  border-radius: 12px;
  border: 3px solid black; }

.button-wrapper a {
  font-family: "Montserrat", sans-serif;
  font-size: 1.6em; }

.c-paleblue {
  background-color: #cdeaf7; }

.c-palepink {
  background-color: #f5c8b5; }

.c-white {
  background-color: white; }

.c-darkblue {
  background-color: #24127a; }

#issues-nav {
  border-bottom: 1px solid #f5c8b5;
  padding-bottom: 25px;
  background-color: white;
  z-index: 50; }

#issues-nav .section {
  max-width: 100%;
  text-align: center; }

@media (min-width: 1100px) {
  #issues-nav {
    position: fixed; }

  #platform {
    position: relative;
    top: 180px; } }
@media (max-width: 1100px) {
  #platform {
    padding-top: 25px; } }
#issues-title {
  font-size: 1.9em;
  font-weight: bold;
  padding: 10px;
  margin: 5px 0;
  color: black;
  display: inline-block; }

a.issues-navlink {
  font-size: 1.35em;
  background-color: #f5c8b5;
  padding: 10px;
  margin: 5px;
  color: black;
  display: inline-block;
  transition: background-color 0.25s ease; }

a.issues-navlink:hover {
  font-style: italic;
  font-weight: normal;
  background-color: #cdeaf7; }

div.issue_details {
  display: none; }

div.issue_details.toggled_open {
  display: inherit; }

@media (min-width: 1100px) {
  div.issue_details div.issue_details {
    margin: 0 70px; }

  .subheader.toggle-issue {
    margin: 0 70px; } }
.toggle-issue:first-of-type {
  border-top: none; }

h3.toggle-issue {
  margin: 25px 0;
  border-bottom: 5px solid #f5c8b5; }

.subheader.toggle-issue {
  border-bottom: 3px solid #cdeaf7; }

.subheader {
  font-style: italic;
  font-size: 1.4em;
  text-align: center; }

h3.toggle-issue::after {
  content: '';
  display: inline-block;
  width: -5px;
  height: 0;
  border-style: solid;
  border-width: 0 8px 12px 8px;
  border-color: transparent transparent #f5c8b5 transparent;
  margin-left: 4px; }

.subheader.toggle-issue::after {
  content: '';
  display: inline-block;
  width: -5px;
  height: 0;
  border-style: solid;
  border-width: 0 8px 12px 8px;
  border-color: transparent transparent #cdeaf7 transparent;
  margin-left: 4px; }

.toggle-issue.issue_closed::after {
  -moz-transform: scaleY(1);
  -o-transform: scaleY(1);
  -webkit-transform: scaleY(1);
  transform: scaleY(1);
  transition: transform .5s ease; }

.toggle-issue.issue_open::after {
  -moz-transform: scaleY(-1);
  -o-transform: scaleY(-1);
  -webkit-transform: scaleY(-1);
  transform: scaleY(-1);
  transition: transform .5s ease; }

.subheader.toggle-issue {
  margin-bottom: 15px; }

.toggle-issue {
  padding: 42px 0 24px 0;
  cursor: pointer; }

#navbar {
  z-index: 100;
  position: fixed;
  top: 0;
  width: 100%;
  background-color: #cdeaf7; }

.navbar-item {
  color: black;
  text-decoration: none;
  font-family: "Montserrat", sans-serif;
  font-size: 1.1em; }

#slogan-txt {
  font-weight: 300;
  flex: 0;
  text-align: left;
  font-size: 14px; }

@media (max-width: 500px) {
  #slogan-txt, #slogan-img {
    text-align: center;
    float: none;
    padding: 0 0 25px 0; }

  #slogan-img {
    margin-top: 50px; } }
@media (min-width: 1100px) {
  .responsive-slogan-break {
    display: none; } }
@media (max-width: 500px) {
  .responsive-slogan-break {
    display: none; } }
#navbar .navbar-hamburger {
  cursor: pointer; }

#navbar .navbar-hamburger span {
  height: 2px;
  width: 30px;
  background-color: black;
  margin: 6px;
  display: block; }

@media screen and (min-width: 1100px) {
  #navbar {
    display: flex;
    flex-wrap: wrap;
    -webkit-flex-wrap: wrap;
    /* Safari 6.1+ */ }

  .link-item {
    float: left;
    display: block;
    padding: 30px;
    text-align: center;
    flex: 1 1 auto;
    -webkit-flex: 1 1 auto; }

  #slogan-img {
    padding: 15px 15px 15px 20px; }

  #slogan-txt {
    padding: 15px 20px 15px 15px; }

  #navbar .navbar-hamburger {
    display: none; } }
@media screen and (max-width: 1100px) {
  #navbar.mobile-closed .link-item {
    display: none; }

  .slogan-item {
    float: left;
    display: block;
    padding: 20px 0 20px 20px;
    font-size: 1em;
    flex: 1 1 auto;
    -webkit-flex: 1 1 auto; }

  #navbar .navbar-hamburger {
    position: absolute;
    top: 20px;
    right: 20px; }

  #navbar.mobile-open .link-item {
    clear: both;
    padding: 20px 0 0 0;
    text-align: center;
    position: relative;
    bottom: 20px; } }
@media (min-width: 1300px) {
  .section.inner.with_subsections {
    display: flex;
    flex-direction: row; } }
.section.inner.full_width {
  padding: 0 30px;
  max-width: 550px;
  margin: auto; }

.section.inner.full_width.wide {
  padding: 0 30px;
  max-width: 90%;
  margin: auto; }

.section.outer {
  padding: 100px 0;
  width: 100%; }

@media (min-width: 1850px) {
  div#lower-sections {
    margin-top: 775px; } }
@media (min-width: 1100px) {
  .section.outer#landing-section {
    padding: 45px 0 80px 0;
    z-index: -10;
    position: fixed;
    top: 61px; }

  div#lower-sections {
    margin-top: 775px; }

  #scroll-to-learn-more {
    display: inherit;
    font-style: italic;
    margin: 90px 0;
    padding: 4px 8px;
    text-align: center;
    font-size: 1.3em; }

  .subsection {
    flex-grow: 1;
    flex-basis: 50%;
    padding: 0 80px; }

  .subsection.extra-padding {
    padding: 40px 80px; } }
@media (max-width: 1100px) {
  .section.outer#landing-section {
    padding: 80px 0 0 0; }

  #scroll-to-learn-more {
    display: none; }

  .subsection {
    padding: 0 30px; }

  .subsection.extra-padding {
    padding: 40px 30px; } }
.section.outer.c-white h2 {
  border-bottom: 6px solid #cdeaf7; }

.section.outer.c-palepink h2 {
  border-bottom: 8px solid white; }

.subsection.no-padding, .section.no-padding {
  padding: 0; }

.sub-sub-section {
  margin-bottom: 80px; }

#title {
  margin-bottom: 40px; }

.platform {
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center; }

.platform div {
  margin: 0 30px; }

@media (min-width: 1100px) {
  #title {
    margin-top: 80px; } }
h1, h2, h3 {
  font-family: "Montserrat", sans-serif;
  text-align: center; }

h1 {
  font-size: 40px;
  margin-bottom: 16px;
  border-bottom: 6px solid #cdeaf7; }

h2 {
  font-size: 1.85em; }

h2#pink-underlined {
  padding: 12px;
  border-bottom: 8px solid #f5c8b5; }

h3 {
  font-size: 1.5em;
  font-weight: bold; }

p {
  line-height: 1.8em;
  font-size: 1.5em; }

.subhead {
  line-height: 1.65em;
  font-size: 1.55em; }

.section {
  font-family: "Montserrat", sans-serif; }

.smallprint {
  font-size: 1.1em; }

.donate-smallprint {
  margin-top: 12px; }

.issue_details p {
  line-height: 1.6em;
  font-size: 1.3em; }

.issue_details strong {
  line-height: 1.6em;
  font-size: 1.3em;
  font-style: italic; }

a {
  color: #24127a;
  text-decoration: underline;
  cursor: pointer; }

a:hover {
  font-weight: bold; }

img {
  max-width: 100%;
  height: auto; }

@media (max-width: 1100px) {
  img#jesse-with-students {
    margin: auto;
    display: block;
    transform: scaleX(-1); }

  img#jesse-street-photo {
    margin: auto;
    display: block; }

  #jesse-with-students-background {
    background-image: none; }

  #street-photo {
    background-image: none; } }
@media (min-width: 1100px) {
  #jesse-with-students-background {
    background-image: url("../images/jesse-with-student.JPG");
    background-size: cover;
    background-repeat: no-repeat;
    margin: 0;
    -moz-transform: scaleX(-1);
    -o-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1); }

  #street-photo {
    background-image: url("../images/jesse-street.jpg");
    margin: -80px 0;
    background-size: cover;
    background-repeat: no-repeat; }

  img.mobile-only {
    display: none; } }
.logo-img {
  height: 100px;
  background-repeat: no-repeat;
  background-position: center; }

#who-is-jesse .logo-img {
  margin: 20px 0 60px 0; }

@media screen and (min-width: 1100px) {
  .logo-img {
    background-image: url("../images/Garfinkel2018_logo.png"); } }
@media screen and (max-width: 1100px) {
  .logo-img {
    background-image: url("../images/il-blue-small.svg"); } }
.footer {
  text-align: center; }

.footer img {
  height: 60px;
  width: 60px;
  margin: 0 0 30px 0; }

/*# sourceMappingURL=output.css.map */

